# AlgorithmVisualizer

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: Algorithm.h
Algorithms/Backend/: AlgorithmRegistrar.h  AlgorithmRegistry.h  AlgorithmVisualizer.cpp  AlgorithmVisualizer.h
Algorithms/Sort/: BubbleSort.cpp  BubbleSort.h  SortingAlgorithm.cpp  SortingAlgorithm.h
